--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400;1,600&display=swap"
         rel="stylesheet">
   <link rel="stylesheet"
-        href="css/styles.css">
+        href="./style.css">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/paraiso-light.min.css">
   <title>Alexander Leonov CV</title>
