--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         href="./style.css">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/paraiso-light.min.css">
+  <link rel="shortcut icon"
+        href="./favicon.ico" />
+  <link rel="icon"
+        type="image/vnd.microsoft.icon"
+        href="./favicon.ico">
+  <link rel="icon"
+        type="image/x-icon"
+        href="./favicon.ico">
   <title>Alexander Leonov CV</title>
 </head>
 <body>
