--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
 <div class="page">
+
   <h1 class="visually-hidden">Alexander Leonov</h1>
   <div class="page__container container">
 
@@ -55,6 +56,11 @@
     </nav>
 
     <aside class="page__aside sidebar">
+      <button class="burger">
+        <span class="burger__item"></span>
+        <span class="burger__item"></span>
+        <span class="burger__item"></span>
+      </button>
       <header class="header">
         <div class="header__avatar">
           <img src="./images/photo.jpg"
@@ -130,6 +136,7 @@
 
     </aside>
     <main class="page__main main">
+
       <section id="about-me"
                class="main__experience main-block about">
         <h2 class="main-block__title"><span>About me</span></h2>
@@ -143,11 +150,10 @@
           </p>
           <p>
             The main goal is starting my career as a Middle Front-End developer. I want to improve my JavaScript skills
-            and to get the the Frontend-job next year.
+            and to get the Frontend-job next year.
           </p>
         </div>
       </section>
-
 
       <section id="experience"
                class="main__experience main-block experience">
@@ -165,7 +171,7 @@
             </li>
             <li class="experience-list__item">
               <h3>
-                LLC "Itorum" (from 04.2020 to 12.2020)
+                LLC "Itorum" (from 04.2020 to 12.2021)
               </h3>
               <ul class=" clear-list">
                 <li>Development, support and modification eSHop;</li>
@@ -195,7 +201,6 @@
         <div class="main-block__inner">
           <ul class="clear-list">
             <li>https://ru.hexlet.io/u/alleonov</li>
-            <li>https://htmlacademy.ru/profile/spawnleon</li>
             <li>https://learn.javascript.ru</li>
           </ul>
         </div>
@@ -271,6 +276,7 @@
       <span class="year">&copy;2021</span>
       <a href="https://rs.school/js/"
          target="_blank"
+         class="rss-school"
          rel="nofollow noreferrer">
         <img width="100"
              height="40"
@@ -279,10 +285,10 @@
       </a>
     </footer>
   </div>
-
 </div>
+
 <script src="./js/app.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script src="./js/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
 </body>
 </html>
