fix: fix some bugs

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta http-equiv="x-ua-compatible"
@@ -15,7 +15,7 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/paraiso-light.min.css">
   <link rel="shortcut icon"
-        href="./favicon.ico" />
+        href="./favicon.ico">
   <link rel="icon"
         type="image/vnd.microsoft.icon"
         href="./favicon.ico">
@@ -55,11 +55,7 @@
     </nav>
 
     <aside class="page__aside sidebar">
-      <button class="burger">
-        <span class="burger__item"></span>
-        <span class="burger__item"></span>
-        <span class="burger__item"></span>
-      </button>
+      <button type="button" class="burger"><span class="burger__item"></span><span class="burger__item"></span><span class="burger__item"></span></button>
       <header class="header">
         <div class="header__avatar">
           <img src="./images/photo.jpg"
@@ -85,7 +81,7 @@
             <a href="tel:+79200272716"
                class="contacts__link">
               <span class="contact__icon contact__icon--phone"></span>
-              <span class="contact__text">+7 (920) 027-27-16</span>
+              <span class="contact__text">+7&nbsp;(920)&nbsp;027&#8209;27&#8209;16</span>
             </a>
           </li>
           <li class="contacts__item">
