--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     </nav>
 
     <aside class="page__aside sidebar">
-      <button title="Open menu" aria-label="Open menu" type="button" class="burger"><span class="burger__item"></span><span class="burger__item"></span><span class="burger__item"></span></button>
+      <button title="Open menu"
+              aria-label="Open menu"
+              type="button"
+              class="burger">
+        <span class="burger__item"></span><span class="burger__item"></span><span class="burger__item"></span></button>
       <header class="header">
         <div class="header__avatar">
           <img src="./images/photo.jpg"
