fix: fix Raw ">" must be encoded as "&gt;"

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                class="main__code-example main-block code-example">
         <h2 class="main-block__title"><span>Code example</span></h2>
         <div class="main-block__inner">
-          <pre class="code-example__pre"><code class="code-example__code js">const fizzBuzz = (begin, end) => {
+          <pre class="code-example__pre"><code class="code-example__code js">const fizzBuzz = (begin, end) =&gt; {
   for (let i = begin; i &lt;= end; i += 1) {
     const hasFizz = i % 3 === 0;
     const hasBuzz = i % 5 === 0;
